tests/query_errors/pp_embed_unrecognized_token3/error.txt
Error: 
    1 | define script snot
    2 | script
    3 |   use foo :: as;
      |              ^^ Found the token `as` but expected `<ident>`
    4 | end;
    5 |
